# address-book-service

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  bashrc  devcontainer.json
db/: schema.sql
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
src/: main.rs
src/repositories/: address_book_repo.rs  contact_repo.rs  mod.rs
src/routes/: address_book.rs  mod.rs
src/services/: address_book_service.rs  mod.rs
src/types/: address_book.rs  contact.rs  mod.rs  pagination.rs
