workspace = { members = ["handle-errors"] }
[package]
name = "addressbook-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.199", features = ["derive"] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.28.2", features = ["full"] }
handle-errors = { version = "0.1.0", path = "./handle-errors" }
